Bug 293521 - Plasmoid does not support URL links
Summary: Plasmoid does not support URL links
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-07 10:30 UTC by David Edmundson
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2012-02-07 10:30:18 UTC
URLs are not rendered as links in the plasmoid.

Fortunately recent refactoring in the text-ui makes this fairly trivial :-)
Comment 1 David Edmundson 2012-02-09 14:12:17 UTC
Git commit f21b0ab2711b6416adb4c2d16ba58893b0ef6d19 by David Edmundson.
Committed on 09/02/2012 at 00:15.
Pushed by davidedmundson into branch 'master'.

Process messages in the plasmoid through our message filter
REVIEW: 103901

M  +5    -1    lib/message-processor.h
M  +3    -1    lib/message.h
M  +4    -2    plasmoid/declarative-plugin/messages-model.cpp

http://commits.kde.org/telepathy-text-ui/f21b0ab2711b6416adb4c2d16ba58893b0ef6d19