Process messages in the plasmoid through our message filter

BUG: 293521
REVIEW: 103901